Refactor error handling in HttpUtils and controllers: replace Error with ProblemDetailResponse and add mapFailure method for improved error mapping